Update WhatsApp community link

--- a/index.html
+++ b/index.html
@@ -419,8 +419,9 @@
                             <p>We have sent a community invite to your WhatsApp.</p>
                             <div class="wa-box">
                                 <p class="wa-instruction">Join below to get the <strong>Secret Materials</strong> &
-                                    <strong>Masterclass Link</strong>:</p>
-                                <a href="https://chat.whatsapp.com/YOUR_COMMUNITY_LINK_HERE" target="_blank"
+                                    <strong>Masterclass Link</strong>:
+                                </p>
+                                <a href="https://chat.whatsapp.com/KSAvj8ywbC2FF6sj9LVSpM" target="_blank"
                                     class="btn-whatsapp">
                                     Join WhatsApp Community →
                                 </a>
